# clcik_tutorial

./: .gitignore  README.md  pyproject.toml
scripts/: hello.py  http.py  http_util.py  image_downloader.py  ptr.py  pycat.py  pyless.py  pywc.py
tests/: test_pycat.py
