[tool.poetry]
name = "click_tutorial"
version = "0.1.0"
description = "A tutorial about using click"
authors = ["le_woudar <lewoudar@gmail.com>"]
license = "MIT"

packages = [
    { include = "scripts" }
]

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.1.2"
Pygments = "^2.7.2"
httpx = "^0.16.1"
anyio = "^2.0.2"
rich = "^9.3.0"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"

[tool.poetry.scripts]
hello = "scripts.hello:cli"
pycat = "scripts.pycat:cli"
pywc = "scripts.pywc:cli"
pyless = "scripts.pyless:cli"
ptr = "scripts.ptr:cli"
httpx = "scripts.http:cli"
imgdl = "scripts.image_downloader:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
